--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>App</title>
+    <%= display_meta_tags default_meta_tags %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
